Fix spacing

--- a/assets/dashboard.css
+++ b/assets/dashboard.css
@@ -161,7 +161,6 @@ main.dashboard>section:last-child {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-top: 20px;
 }
 
 .topic-group>.button {
@@ -212,7 +211,10 @@ main.dashboard>section:last-child {
 
 /* ------  Layout: Profile -----  */
 
-
+.profile-pic {
+  height: 200px;
+  width: 200px;
+}
 
 
 /* ---------- Media queries ------ */
